--- a/core/templates/core/main/content.html
+++ b/core/templates/core/main/content.html
@@ -52,7 +52,7 @@
 {#        <span class="dot" onclick="currentSlide(5)"></span>#}
 {#    </div>#}
 
-    <div class="row">
+    <div class="row content-main">
         <div class="col-1 explore-select">
             <ul class="list-group">
                 <li class="list-group-item {% if explore == 'featured' %}active{% endif %}"><a href="{% url 'featured' %}">Featured</a></li>
