--- a/core/static/core/stylesheets/header.css
+++ b/core/static/core/stylesheets/header.css
@@ -12,6 +12,10 @@
     border-bottom: 1px solid #c2c2c2;
 }
 
+.header-link {
+    margin-top: 20px;
+}
+
 #logo{
     /*margin-left: 20px;*/
     margin-top: -20px;
