--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/header.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/animate.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/ing_search.css' %}">
 
 </head>
 
