--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/header.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/animate.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/ing_search.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/recipe_submit.css' %}">
 
 </head>
 
