--- a/core/templates/core/recipes/recipe_submit.html
+++ b/core/templates/core/recipes/recipe_submit.html
@@ -8,8 +8,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Submit Recipe</h1>
+<div class="container recipe-submit">
+    <h2>Submit Recipe</h2>
 
     {% include 'core/recipes/recipe_form.html' %}
 
