--- a/core/templates/core/users/user_account_base.html
+++ b/core/templates/core/users/user_account_base.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-        <div class="row container-fluid">
+        <div class="row container-fluid account_content_container">
             <div class="col-1 col-2 explore-select">
                 <ul class="list-group">
                     <li class="list-group-item" ><div class = "user_profile_img_placeholder"></div></li>
