--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -21,7 +21,7 @@
         </form>
     </div>
 
-    <div id = "browse_button_container">
+    <div id = "browse_button_main_container">
         <div class=" browse_button_container dropdown dropdown-menu-right">
             <a href="#" class="btn btn-primary dropdown-toggle browse_button" data-toggle="dropdown">Browse</a>
             {{ category_table.render|safe }}
