fix ingredient search
Signed-off-by: Walker J Crouse <walker.crouse@uvm.edu>

--- a/core/static/core/stylesheets/base.css
+++ b/core/static/core/stylesheets/base.css
@@ -551,3 +551,8 @@ img {vertical-align: middle;}
     margin-bottom: 200px;
     padding: 50px;
 }
+
+.recipe-edit {
+    padding-top: 20px;
+    margin-bottom: 200px;
+}
