--- a/core/templates/core/users/user_profile.html
+++ b/core/templates/core/users/user_profile.html
@@ -1,5 +1,6 @@
 {% extends 'core/users/user_account_base.html' %}
 {% block title %}User | Profile{% endblock %}
+{% load static %}
 
 {% block user_account_content %}
 
