--- a/core/templates/core/recipes/recipe_detail.html
+++ b/core/templates/core/recipes/recipe_detail.html
@@ -35,19 +35,19 @@
     <div class = "row recipe_quick_info_container">
         <div class = "recipe_quick_info">
             <p class = "quick_info_text">{{ recipe.prep_time }} </p>
-            <p>Prep (min)</p>
+            <p class = "quick_info_text_bottom">Prep</p>
         </div>
         <div class = "recipe_quick_info">
             <p class = "quick_info_text">{{ recipe.cook_time }}</p>
-            <p>Cook (min)</p>
+            <p class = "quick_info_text_bottom">Cook</p>
         </div>
         <div class = "recipe_quick_info">
             <p class = "quick_info_text">{{ recipe.servings }} </p>
-            <p>Servings</p>
+            <p class = "quick_info_text_bottom">Servings</p>
         </div>
         <div class = "recipe_quick_info" style="border: none">
             <p class = "quick_info_text">{{ recipe.calories }}</p>
-            <p>Calories</p>
+            <p class = "quick_info_text_bottom">Calories</p>
         </div>
     </div>
 
